--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<button type="button"  class="btn btn-primary">basic</button>
+<app-header></app-header>
+<div class="container">
+    <div class="row">
+        <div class="col-mid-12">
+            <h2>Iam working</h2>
+            
+        </div>
+    </div>
+</div>
